--- a/package.json
+++ b/package.json
@@ -3,38 +3,43 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "watch:css": "npx tailwindcss -i ./src/tailwind.css -o ./public/tailwind.css --watch",
+    "watch:storybook": "storybook dev -p 6006",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/draft-js": "^0.11.10",
     "@types/react-draft-wysiwyg": "^1.13.4",
+    "concurrently": "^7.6.0",
     "draft-js": "^0.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
-    "react-router-dom": "^6.4.5",
+    "react-router-dom": "^6.6.2",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
+    "tailwindcss": "^3.2.4",
     "vite": "^3.2.5",
     "zustand": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
-    "@storybook/addon-actions": "^6.5.15",
-    "@storybook/addon-essentials": "^6.5.15",
-    "@storybook/addon-interactions": "^6.5.15",
-    "@storybook/addon-links": "^6.5.15",
-    "@storybook/builder-vite": "^0.2.7",
-    "@storybook/builder-webpack4": "^6.5.15",
-    "@storybook/manager-webpack4": "^6.5.15",
-    "@storybook/react": "^6.5.15",
+    "@storybook/addon-essentials": "^7.0.0-beta.21",
+    "@storybook/addon-interactions": "^7.0.0-beta.21",
+    "@storybook/addon-links": "^7.0.0-beta.21",
+    "@storybook/blocks": "^7.0.0-beta.21",
+    "@storybook/react": "^7.0.0-beta.21",
+    "@storybook/react-vite": "^7.0.0-beta.21",
     "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.26",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "babel-loader": "^8.3.0",
     "eslint": "^8.29.0",
-    "eslint-plugin-react": "^7.31.11"
+    "eslint-plugin-react": "^7.31.11",
+    "prop-types": "^15.8.1",
+    "storybook": "^7.0.0-beta.21"
   }
 }
