--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "build-storybook": "storybook build"
     },
     "dependencies": {
+        "@headlessui/react": "^1.7.7",
+        "@heroicons/react": "^2.0.13",
         "@tailwindcss/forms": "^0.5.3",
         "@types/draft-js": "^0.11.10",
         "@types/react-draft-wysiwyg": "^1.13.4",
